// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthenticationStep should request WIF if wallet was imported using WIF 1`] = `
<DocumentFragment>
  <div
    class="space-y-6"
    data-testid="AuthenticationStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Authenticate
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Enter your WIF to authenticate the transaction.
        </div>
      </div>
    </div>
    <fieldset
      class="FormField__FormFieldStyled-sc-q4bblx-0 dFNJMk flex flex-col space-y-2"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="wif"
      >
        WIF
      </label>
      <div
        class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
      >
        <div
          class="relative flex flex-1 h-full"
        >
          <input
            class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
            data-testid="AuthenticationStep__wif"
            name="wif"
            type="password"
            value=""
          />
        </div>
        <div
          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
        >
          <div
            class=""
          >
            <button
              class="flex relative justify-center items-center w-full h-full text-2xl focus:outline-none ring-focus"
              data-ring-focus-margin="-m-1"
              data-testid="InputPassword__toggle"
              type="button"
            >
              <div
                class="sc-bdvvtL qGXhc"
                height="20"
                width="20"
              >
                <svg>
                  eye.svg
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`AuthenticationStep should request mnemonic and second mnemonic 1`] = `
<DocumentFragment>
  <div
    class="space-y-6"
    data-testid="AuthenticationStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Authenticate
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Enter your mnemonic passphrase to authenticate the transaction.
        </div>
      </div>
    </div>
    <fieldset
      class="FormField__FormFieldStyled-sc-q4bblx-0 dFNJMk flex flex-col space-y-2"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="mnemonic"
      >
        Mnemonic
      </label>
      <div
        class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
      >
        <div
          class="relative flex flex-1 h-full"
        >
          <input
            class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
            data-testid="AuthenticationStep__mnemonic"
            name="mnemonic"
            type="password"
            value=""
          />
        </div>
        <div
          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
        >
          <div
            class=""
          >
            <button
              class="flex relative justify-center items-center w-full h-full text-2xl focus:outline-none ring-focus"
              data-ring-focus-margin="-m-1"
              data-testid="InputPassword__toggle"
              type="button"
            >
              <div
                class="sc-bdvvtL qGXhc"
                height="20"
                width="20"
              >
                <svg>
                  eye.svg
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="FormField__FormFieldStyled-sc-q4bblx-0 dFNJMk flex flex-col space-y-2"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="secondMnemonic"
      >
        2nd Mnemonic
      </label>
      <div
        class="Input__InputWrapperStyled-sc-1i8sd1r-0 ktoJbG"
        disabled=""
      >
        <div
          class="relative flex flex-1 h-full"
        >
          <input
            class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full text-theme-secondary-text"
            data-testid="AuthenticationStep__second-mnemonic"
            disabled=""
            name="secondMnemonic"
            type="password"
            value=""
          />
        </div>
        <div
          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
        >
          <div
            class=""
          >
            <button
              class="flex relative justify-center items-center w-full h-full text-2xl focus:outline-none ring-focus"
              data-ring-focus-margin="-m-1"
              data-testid="InputPassword__toggle"
              type="button"
            >
              <div
                class="sc-bdvvtL qGXhc"
                height="20"
                width="20"
              >
                <svg>
                  eye.svg
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`AuthenticationStep should request mnemonic if wallet was imported using address 1`] = `
<DocumentFragment>
  <div
    class="space-y-6"
    data-testid="AuthenticationStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Authenticate
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Enter your mnemonic passphrase to authenticate the transaction.
        </div>
      </div>
    </div>
    <fieldset
      class="FormField__FormFieldStyled-sc-q4bblx-0 dFNJMk flex flex-col space-y-2"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="mnemonic"
      >
        Mnemonic
      </label>
      <div
        class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
      >
        <div
          class="relative flex flex-1 h-full"
        >
          <input
            class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
            data-testid="AuthenticationStep__mnemonic"
            name="mnemonic"
            type="password"
            value=""
          />
        </div>
        <div
          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
        >
          <div
            class=""
          >
            <button
              class="flex relative justify-center items-center w-full h-full text-2xl focus:outline-none ring-focus"
              data-ring-focus-margin="-m-1"
              data-testid="InputPassword__toggle"
              type="button"
            >
              <div
                class="sc-bdvvtL qGXhc"
                height="20"
                width="20"
              >
                <svg>
                  eye.svg
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`AuthenticationStep should request mnemonic if wallet was imported using mnemonic 1`] = `
<DocumentFragment>
  <div
    class="space-y-6"
    data-testid="AuthenticationStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Authenticate
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Enter your mnemonic passphrase to authenticate the transaction.
        </div>
      </div>
    </div>
    <fieldset
      class="FormField__FormFieldStyled-sc-q4bblx-0 dFNJMk flex flex-col space-y-2"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="mnemonic"
      >
        Mnemonic
      </label>
      <div
        class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
      >
        <div
          class="relative flex flex-1 h-full"
        >
          <input
            class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
            data-testid="AuthenticationStep__mnemonic"
            name="mnemonic"
            type="password"
            value=""
          />
        </div>
        <div
          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
        >
          <div
            class=""
          >
            <button
              class="flex relative justify-center items-center w-full h-full text-2xl focus:outline-none ring-focus"
              data-ring-focus-margin="-m-1"
              data-testid="InputPassword__toggle"
              type="button"
            >
              <div
                class="sc-bdvvtL qGXhc"
                height="20"
                width="20"
              >
                <svg>
                  eye.svg
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`AuthenticationStep should request private key if wallet was imported using private key 1`] = `
<DocumentFragment>
  <div
    class="space-y-6"
    data-testid="AuthenticationStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Authenticate
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Enter your private key to authenticate the transaction.
        </div>
      </div>
    </div>
    <fieldset
      class="FormField__FormFieldStyled-sc-q4bblx-0 dFNJMk flex flex-col space-y-2"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="privateKey"
      >
        Private Key
      </label>
      <div
        class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
      >
        <div
          class="relative flex flex-1 h-full"
        >
          <input
            class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
            data-testid="AuthenticationStep__private-key"
            name="privateKey"
            type="password"
            value=""
          />
        </div>
        <div
          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
        >
          <div
            class=""
          >
            <button
              class="flex relative justify-center items-center w-full h-full text-2xl focus:outline-none ring-focus"
              data-ring-focus-margin="-m-1"
              data-testid="InputPassword__toggle"
              type="button"
            >
              <div
                class="sc-bdvvtL qGXhc"
                height="20"
                width="20"
              >
                <svg>
                  eye.svg
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`AuthenticationStep should request secret and second secret 1`] = `
<DocumentFragment>
  <div
    class="space-y-6"
    data-testid="AuthenticationStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Authenticate
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Enter your secret to authenticate the transaction.
        </div>
      </div>
    </div>
    <fieldset
      class="FormField__FormFieldStyled-sc-q4bblx-0 dFNJMk flex flex-col space-y-2"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="secret"
      >
        Secret
      </label>
      <div
        class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
      >
        <div
          class="relative flex flex-1 h-full"
        >
          <input
            class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
            data-testid="AuthenticationStep__secret"
            name="secret"
            type="password"
            value=""
          />
        </div>
        <div
          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
        >
          <div
            class=""
          >
            <button
              class="flex relative justify-center items-center w-full h-full text-2xl focus:outline-none ring-focus"
              data-ring-focus-margin="-m-1"
              data-testid="InputPassword__toggle"
              type="button"
            >
              <div
                class="sc-bdvvtL qGXhc"
                height="20"
                width="20"
              >
                <svg>
                  eye.svg
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="FormField__FormFieldStyled-sc-q4bblx-0 dFNJMk flex flex-col space-y-2"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="secondSecret"
      >
        2nd Secret
      </label>
      <div
        class="Input__InputWrapperStyled-sc-1i8sd1r-0 ktoJbG"
        disabled=""
      >
        <div
          class="relative flex flex-1 h-full"
        >
          <input
            class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full text-theme-secondary-text"
            data-testid="AuthenticationStep__second-secret"
            disabled=""
            name="secondSecret"
            type="password"
            value=""
          />
        </div>
        <div
          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
        >
          <div
            class=""
          >
            <button
              class="flex relative justify-center items-center w-full h-full text-2xl focus:outline-none ring-focus"
              data-ring-focus-margin="-m-1"
              data-testid="InputPassword__toggle"
              type="button"
            >
              <div
                class="sc-bdvvtL qGXhc"
                height="20"
                width="20"
              >
                <svg>
                  eye.svg
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`AuthenticationStep should request secret if wallet was imported using secret 1`] = `
<DocumentFragment>
  <div
    class="space-y-6"
    data-testid="AuthenticationStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Authenticate
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Enter your secret to authenticate the transaction.
        </div>
      </div>
    </div>
    <fieldset
      class="FormField__FormFieldStyled-sc-q4bblx-0 dFNJMk flex flex-col space-y-2"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="secret"
      >
        Secret
      </label>
      <div
        class="Input__InputWrapperStyled-sc-1i8sd1r-0 cLNVAR"
      >
        <div
          class="relative flex flex-1 h-full"
        >
          <input
            class="Input__InputStyled-sc-1i8sd1r-1 hPntwa p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
            data-testid="AuthenticationStep__secret"
            name="secret"
            type="password"
            value=""
          />
        </div>
        <div
          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
        >
          <div
            class=""
          >
            <button
              class="flex relative justify-center items-center w-full h-full text-2xl focus:outline-none ring-focus"
              data-ring-focus-margin="-m-1"
              data-testid="InputPassword__toggle"
              type="button"
            >
              <div
                class="sc-bdvvtL qGXhc"
                height="20"
                width="20"
              >
                <svg>
                  eye.svg
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`AuthenticationStep should show ledger waiting app screen 1`] = `
<DocumentFragment>
  <div
    class="space-y-8"
    data-testid="AuthenticationStep"
  >
    <div
      class="mt-8 space-y-8"
    >
      <div
        class="flex justify-between items-end bg-theme-background"
      >
        <div
          class="space-y-4"
        >
          <h1
            class="mb-0 text-2xl"
            data-testid="header__title"
          >
            Ledger Wallet
          </h1>
          <div
            class="text-theme-secondary-text"
            data-testid="header__subtitle"
          >
            Connect your Ledger and confirm input.
          </div>
        </div>
      </div>
      <svg
        class="mx-auto"
      >
        waiting-ledger-device-dark-green.svg
      </svg>
      <div
        class="inline-flex justify-center items-center space-x-3 w-full"
      >
        <div
          class="Spinner-sc-1rpx65r-0 lfdpzU"
          color="info"
        />
        <span
          class="font-semibold animate-pulse text-theme-secondary-text"
          data-testid="LedgerWaitingApp-loading_message"
        >
          Open the ARK app on your device ...
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AuthenticationStep should show ledger waiting device screen 1`] = `
<DocumentFragment>
  <div
    class="space-y-8"
    data-testid="AuthenticationStep"
  >
    <div
      class="space-y-8"
    >
      <div
        class="flex justify-between items-end bg-theme-background"
      >
        <div
          class="space-y-4"
        >
          <h1
            class="mb-0 text-2xl"
            data-testid="header__title"
          >
            Ledger Wallet
          </h1>
          <div
            class="text-theme-secondary-text"
            data-testid="header__subtitle"
          >
            Connect your Ledger and confirm input.
          </div>
        </div>
      </div>
      <svg
        class="mx-auto"
      >
        waiting-ledger-device-dark-green.svg
      </svg>
      <div
        class="inline-flex justify-center items-center space-x-3 w-full"
      >
        <div
          class="Spinner-sc-1rpx65r-0 lfdpzU"
          color="info"
        />
        <span
          class="font-semibold animate-pulse text-theme-secondary-text"
          data-testid="LedgerWaitingDevice-loading_message"
        >
          Waiting for Ledger ...
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AuthenticationStep should show ledger waiting device screen for Nano S 1`] = `
<DocumentFragment>
  <div
    class="space-y-8"
    data-testid="AuthenticationStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Confirm Your Transaction
        </h1>
      </div>
    </div>
    <svg
      class="my-8"
    >
      confirm-transaction-ledger-banner-dark-green.svg
    </svg>
    <div
      class="mt-8 text-theme-secondary-text"
      data-testid="LedgerConfirmation-description"
    >
      Please review and verify the information on your Ledger device. Choose Accept to complete your transaction.
    </div>
    <div
      class="inline-flex justify-center items-center mt-8 space-x-3 w-full"
    >
      <div
        class="Spinner-sc-1rpx65r-0 lfdpzU"
        color="info"
      />
      <span
        class="font-semibold text-theme-secondary-900 dark:text-theme-secondary-600"
        data-testid="LedgerConfirmation-loading_message"
      >
        Waiting for confirmation …
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AuthenticationStep should show ledger waiting device screen for Nano X 1`] = `
<DocumentFragment>
  <div
    class="space-y-8"
    data-testid="AuthenticationStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Confirm Your Transaction
        </h1>
      </div>
    </div>
    <svg
      class="my-8"
    >
      confirm-transaction-ledger-banner-dark-green.svg
    </svg>
    <div
      class="mt-8 text-theme-secondary-text"
      data-testid="LedgerConfirmation-description"
    >
      Please review and verify the information on your Ledger device. Choose Accept to complete your transaction.
    </div>
    <div
      class="inline-flex justify-center items-center mt-8 space-x-3 w-full"
    >
      <div
        class="Spinner-sc-1rpx65r-0 lfdpzU"
        color="info"
      />
      <span
        class="font-semibold text-theme-secondary-900 dark:text-theme-secondary-600"
        data-testid="LedgerConfirmation-loading_message"
      >
        Waiting for confirmation …
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AuthenticationStep should show only ledger confirmation 1`] = `
<DocumentFragment>
  <div
    class="space-y-8"
    data-testid="AuthenticationStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-2xl"
          data-testid="header__title"
        >
          Confirm Your Transaction
        </h1>
      </div>
    </div>
    <svg
      class="my-8"
    >
      confirm-transaction-ledger-banner-dark-green.svg
    </svg>
    <div
      class="mt-8 text-theme-secondary-text"
      data-testid="LedgerConfirmation-description"
    >
      Please review and verify the information on your Ledger device. Choose Accept to complete your transaction.
    </div>
    <div
      class="inline-flex justify-center items-center mt-8 space-x-3 w-full"
    >
      <div
        class="Spinner-sc-1rpx65r-0 lfdpzU"
        color="info"
      />
      <span
        class="font-semibold text-theme-secondary-900 dark:text-theme-secondary-600"
        data-testid="LedgerConfirmation-loading_message"
      >
        Waiting for confirmation …
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AuthenticationStep should specify ledger supported model 1`] = `
<DocumentFragment>
  <div
    class="space-y-8"
    data-testid="AuthenticationStep"
  >
    <div
      class="mt-8 space-y-8"
      data-testid="LedgerDeviceError"
    >
      <div
        class="flex justify-between items-end bg-theme-background"
      >
        <div
          class="space-y-4"
        >
          <h1
            class="mb-0 text-2xl"
            data-testid="header__title"
          >
            Ledger Wallet
          </h1>
          <div
            class="text-theme-secondary-text"
            data-testid="header__subtitle"
          >
            Connect your Ledger Nano X and confirm input.
          </div>
        </div>
      </div>
      <svg
        class="mx-auto"
      >
        error-transaction-ledger-banner-dark-green.svg
      </svg>
      <div
        class="flex overflow-hidden flex-col space-y-4 rounded-lg p-4 bg-theme-danger-50 dark:bg-theme-secondary-800 sm:space-y-0 sm:space-x-4 sm:flex-row sm:items-center"
      >
        <div
          class="h-11 w-11 flex flex-shrink-0 items-center justify-center rounded-lg text-white bg-theme-danger-400"
        >
          <div
            class="sc-bdvvtL qGXhc"
            height="20"
            width="20"
          >
            <svg>
              circle-cross.svg
            </svg>
          </div>
        </div>
        <div
          class="flex flex-col w-full"
        >
          <div
            class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
          >
            A 
            <strong>
              Ledger Nano S
            </strong>
             is connected, but his operation requires a 
            <strong>
              Ledger Nano X
            </strong>
            . Connect the appropriate device to continue.
          </div>
        </div>
      </div>
      <div
        class="inline-flex justify-center items-center space-x-3 w-full"
      >
        <div
          class="Spinner-sc-1rpx65r-0 lfdpzU"
          color="info"
        />
        <span
          class="font-semibold animate-pulse text-theme-secondary-text"
          data-testid="LedgerWaitingDevice-loading_message"
        >
          Waiting for Ledger ...
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
